# ringlight

./: CLAUDE.md  Cargo.toml  README.md  build.rs  ringlight.desktop
.github/workflows/: publish-extension.yml
gnome-extension/: extension.js  metadata.json
src/: app.rs  camera.rs  extension_installer.rs  layer_shell.rs  main.rs  mouse.rs  overlay.rs  renderer.rs  settings.rs  tray.rs
