[package]
name = "ringlight"
version = "0.2.0"
edition = "2021"
description = "Desktop ring light overlay for Pop!_OS (COSMIC Desktop)"
license = "GPL-3.0"
authors = ["Jean Naude"]
repository = "https://github.com/twigglits/ringlight"
keywords = ["ringlight", "webcam", "overlay", "cosmic", "wayland"]
categories = ["gui"]

[dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync"] }
futures-util = "0.3"

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
default-features = false
features = [
    "applet",
    "tokio",
    "wgpu",
]
